--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <title>Currency Converter</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/cryptofont.min.css">
   </head>
   <body>
     <noscript>
