--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,19 @@
     <noscript>
       <strong>We're sorry but crypto-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js').then(registration => {
+            console.log('service worker registration was successful')
+          }, err => {
+            console.log('service worker registration failed')
+          });
+        });
+      }
+    </script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
