--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js').then(registration => {
+          navigator.serviceWorker.register('<%= BASE_URL %>service-worker.js').then(registration => {
             console.log('service worker registration was successful')
           }, err => {
             console.log('service worker registration failed')
